2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/menu.php: Fixed some problems with manage agents
	and new menu structure.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_template.php
	godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/planned_downtime.php,
	godmode/agentes/agent_manager.php: Moved manage agent menu from operation
	to administration menu.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_template.php,
	godmode/agentes/fields_manager.php,
	godmode/agentes/agent_conf_gis.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/configure_field.php,
	godmode/agentes/planned_downtime.php,
	godmode/agentes/manage_config_remote.php,
	godmode/agentes/agent_manager.php: Moved manage agent menu from operation
	to administration menu.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php,
	godmode/menu.php: Moved manage agent menu from operation to administration
	menu

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php: Moved submenu "SNMP trap generator" to a second
	level menu inside "SNMP console" submenu.

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed into the function
	"visual_map_print_visual_map" the unclose links of percentile bar.
	
	Fixes: #3520640

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php: Added urlencode in units to
	scape weird symbols like %, &, etc.

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/fgraph.php: Added check for empty legend in flash 
	charts.

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
