@@ -210,7 +210,7 @@ $img_style = array ("class" => "top", "width" => 16);
 if ($id_agente) {
 	
 	/* View tab */
-	$viewtab['text'] = '<a href="index.php?sec=gagente&amp;sec2=operation/agentes/ver_agente&amp;id_agente='.$id_agente.'">' 
+	$viewtab['text'] = '<a href="index.php?sec=estado&amp;sec2=operation/agentes/ver_agente&amp;id_agente='.$id_agente.'">' 
 			. html_print_image ("images/zoom.png", true, array ("title" =>__('View')))
 			. '</a>';
 			
