@@ -148,7 +148,7 @@ if (check_acl ($config['id_user'], 0, "AW")) {
 	$tab = 'setup';
 
 	/* Setup tab */
-	$setuptab['text'] = '<a href="index.php?sec=estado&sec2=godmode/agentes/modificar_agente">' 
+	$setuptab['text'] = '<a href="index.php?sec=gagente&sec2=godmode/agentes/modificar_agente">' 
 			. html_print_image ("images/setup.png", true, array ("title" =>__('Setup')))
 			. '</a>';
 			
@@ -438,7 +438,7 @@ foreach ($agents as $agent) {
 	$data[0] .= '<a href="index.php?sec=estado&sec2=operation/agentes/ver_agente&id_agente='.$agent["id_agente"].'&tab=data">'.__('Data').'</a>';	
 	if (check_acl ($config['id_user'], $agent["id_grupo"], "AW")) {
 		$data[0] .= ' | ';		
-		$data[0] .= '<a href="index.php?sec=estado&amp;sec2=godmode/agentes/configurar_agente&amp;id_agente='.$agent["id_agente"].'">'.__('Edit').'</a>';
+		$data[0] .= '<a href="index.php?sec=gagente&amp;sec2=godmode/agentes/configurar_agente&amp;id_agente='.$agent["id_agente"].'">'.__('Edit').'</a>';
 	}
 	$data[0] .= '</div>';
 				
